@@ -164,6 +164,7 @@ ATTR_jobforcecanceltime,
 ATTR_maxarraysize,
 ATTR_maxslotlimit,
 ATTR_recordjobinfo,
+ATTR_recordjobscript,
 #ifdef MUNGE_AUTH
 ATTR_authusers,
 #endif
