@@ -2016,7 +2016,7 @@ static void change_logs(
 
   if(server.sv_attr[(int)SRV_ATR_RecordJobInfo].at_val.at_long)
     {
-    job_log_open(log_file, path_jobinfo_log);
+    job_log_open(NULL, path_jobinfo_log);
     }
 
   rpp_dbprt = 1 - rpp_dbprt; /* toggle debug prints for RPP */
