@@ -1804,7 +1804,7 @@ void check_job_log(
   if ((server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_flags
        & ATR_VFLAG_SET) != 0)
     {
-    if ((log_size() >= server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_val.at_long)
+    if ((job_log_size() >= server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_val.at_long)
        && (server.sv_attr[(int)SRV_ATR_LogFileMaxSize].at_val.at_long > 0))
       {
       log_event(
